--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -32,3 +32,7 @@
 [[constraint]]
   branch = "master"
   name = "github.com/buger/jsonparser"
+
+[[constraint]]
+  name = "github.com/pkg/errors"
+  version = "0.8.0"
