--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -44,3 +44,7 @@
 [[constraint]]
   name = "github.com/go-sql-driver/mysql"
   version = "1.3.0"
+
+[[constraint]]
+  name = "github.com/johnnadratowski/golang-neo4j-bolt-driver"
+  version = "0.1.0"
