added plugin folder to neo4j docker-compose service and algo plugin

--- a/db-stack.yml
+++ b/db-stack.yml
@@ -22,6 +22,8 @@ services:
       - 7687:7687
     volumes:
       - ./neo4j/data:/data
+      - ./neo4j/plugins:/plugins
     environment:
       - NEO4J_dbms_memory_pagecache_size=4G
       - NEO4J_dbms.memory.heap.max_size=12G
+      - NEO4J_dbms.security.procedures.unrestricted=algo.*
