--- a/db-stack.yml
+++ b/db-stack.yml
@@ -24,6 +24,6 @@ services:
       - ./neo4j/data:/data
       - ./neo4j/plugins:/plugins
     environment:
-      - NEO4J_dbms_memory_pagecache_size=4G
-      - NEO4J_dbms.memory.heap.max_size=12G
-      - NEO4J_dbms.security.procedures.unrestricted=algo.*
+      - NEO4J_dbms_memory_heap_initialSize=8G
+      - NEO4J_dbms_memory_heap_maxSize=8G
+      - NEO4J_dbms_security_procedures_unrestricted=algo.*
