--- a/db-stack.yml
+++ b/db-stack.yml
@@ -26,4 +26,4 @@ services:
     environment:
       - NEO4J_dbms_memory_heap_initialSize=8G
       - NEO4J_dbms_memory_heap_maxSize=8G
-      - NEO4J_dbms_security_procedures_unrestricted=algo.*
+      - NEO4J_dbms_security_procedures_unrestricted=algo.*,apoc.\\\*
