--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -52,3 +52,7 @@
 [[constraint]]
   name = "github.com/mongodb/mongo-go-driver"
   version = "0.0.4"
+
+[[constraint]]
+  name = "github.com/blang/semver"
+  version = "3.5.1"
