--- a/db-stack.yml
+++ b/db-stack.yml
@@ -8,7 +8,7 @@ services:
       MYSQL_ROOT_PASSWORD: npm-analysis
       MYSQL_DATABASE: npm
     volumes:
-      - ./npmMysql:/var/lib/mysql
+      - ./db-data/mysql:/var/lib/mysql
     ports:
       - 3306:3306
 
@@ -19,8 +19,8 @@ services:
       - 7474:7474
       - 7687:7687
     volumes:
-      - ./neo4j/data:/data
-      - ./neo4j/plugins:/plugins
+      - ./db-data/neo4j/data:/data
+      - ./db-data/neo4j/plugins:/plugins
     environment:
       - NEO4J_dbms_memory_heap_initialSize=2G
       - NEO4J_dbms_memory_heap_maxSize=2G
@@ -35,4 +35,4 @@ services:
       MONGO_INITDB_ROOT_USERNAME: npm
       MONGO_INITDB_ROOT_PASSWORD: npm123
     volumes:
-      - ./mongod/data:/data/db
+      - ./db-data/mongod/data:/data/db
