--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -56,3 +56,7 @@
 [[constraint]]
   name = "github.com/blang/semver"
   version = "3.5.1"
+
+[[constraint]]
+  name = "github.com/Masterminds/semver"
+  version = "1.4.2"
