--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -64,3 +64,7 @@
 [[constraint]]
   branch = "master"
   name = "gonum.org/v1/plot"
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/remeh/sizedwaitgroup"
