--- a/codeanalysispipeline/codeanalysis/exports-analysis/package.json
+++ b/codeanalysispipeline/codeanalysis/exports-analysis/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "tsc",
     "exec": "node ./dist/index.js",
-    "start": "tsc && node ./dist/index.js"
+    "start": "tsc && node ./dist/index.js",
+    "package": "pkg --output exports-analysis ./dist/index.js"
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +19,8 @@
   "devDependencies": {
     "@types/babel-traverse": "^6.25.4",
     "@types/estree": "0.0.39",
-    "@types/node": "^10.5.1"
+    "@types/node": "^10.5.1",
+    "typescript": "^2.9.2",
+    "pkg": "^4.3.3"
   }
 }
