--- a/codeanalysispipeline/codeanalysis/exports-analysis/package.json
+++ b/codeanalysispipeline/codeanalysis/exports-analysis/package.json
@@ -7,7 +7,7 @@
     "build": "tsc",
     "exec": "node ./dist/index.js",
     "start": "tsc && node ./dist/index.js",
-    "package": "pkg --output exports-analysis ./dist/index.js"
+    "package": "pkg --output analysis ./dist/index.js"
   },
   "author": "",
   "license": "ISC",
