exports-analysis: added tern to improve type retrieving when different scopes define different variables

--- a/codeanalysis/callgraph-analysis/package.json
+++ b/codeanalysis/callgraph-analysis/package.json
@@ -13,7 +13,7 @@
     "pkg": "^4.3.3"
   },
   "scripts": {
-    "pack": "pkg --output analysis ./index.js"
+    "pack": "pkg --output analysis --options max_old_space_size=8192,stack-size=10000 ./index.js"
   },
   "author": "",
   "license": "ISC"
