--- a/codeanalysis/exports-analysis/tsconfig.json
+++ b/codeanalysis/exports-analysis/tsconfig.json
@@ -25,9 +25,7 @@
         /* Strict Type-Checking Options */
         "strict": true /* Enable all strict type-checking options. */,
 
-        // need to turn off noImplicitAny because of third party libraries not having types
-        "noImplicitAny": false /* Raise error on expressions and declarations with an implied 'any' type. */,
-
+        // "noImplicitAny": true /* Raise error on expressions and declarations with an implied 'any' type. */,
         // "strictNullChecks": true,              /* Enable strict null checks. */
         // "strictFunctionTypes": true,           /* Enable strict checking of function types. */
         // "strictPropertyInitialization": true,  /* Enable strict checking of property initialization in classes. */
