--- a/db-stack.yml
+++ b/db-stack.yml
@@ -37,6 +37,7 @@ services:
     environment:
       - NEO4J_dbms_memory_heap_maxSize=2G
       - NEO4J_dbms_security_procedures_unrestricted=algo.*,apoc.\\\*
+      - NEO4J_dbms_connector_bolt_advertised__address=:7688
 
   mongodb:
     image: mongo:3.6
