dynamic export analysis: set timeout to 15 seconds and small improvement

--- a/codeanalysis/dynamic-export-analysis/Dockerfile
+++ b/codeanalysis/dynamic-export-analysis/Dockerfile
@@ -6,4 +6,6 @@ WORKDIR /analyzer
 
 COPY . .
 
+RUN yarn add readdirp --silent --non-interactive --no-lockfile 1>&2
+
 ENTRYPOINT [ "./analyze.sh" ]
