callgraph-analysis: now builds typescript inside dockerfile

--- a/codeanalysis/js/callgraph-analysis/Dockerfile
+++ b/codeanalysis/js/callgraph-analysis/Dockerfile
@@ -3,14 +3,15 @@ FROM node:8-slim
 RUN groupadd -r analysis && useradd --no-log-init --system --gid analysis analysis -d /analyzer
 RUN mkdir /analyzer && chown -R analysis:analysis /analyzer
 USER analysis
-# TODO(markuszm): Either run this after building with typescript (copying from dist) or we can
-# shuffle this directory to have all the typescript under 'src', then build it from within the
-# dockerfile
-COPY --chown=analysis dist /analyzer
+
+COPY --chown=analysis src /analyzer
+COPY --chown=analysis analyze.sh /analyzer/
 COPY --chown=analysis package.json /analyzer/
+COPY --chown=analysis tsconfig.json /analyzer/
 
 WORKDIR /analyzer
 RUN yarn install
+RUN npm run build
 
 WORKDIR /
 CMD ["analyzer/analyze.sh"]
