Update analyzer unittest, sh, etc

--- a/codeanalysis/js/callgraph-analysis/Dockerfile
+++ b/codeanalysis/js/callgraph-analysis/Dockerfile
@@ -8,6 +8,7 @@ COPY --chown=analysis src /analyzer
 COPY --chown=analysis analyze.sh /analyzer/
 COPY --chown=analysis package.json /analyzer/
 COPY --chown=analysis tsconfig.json /analyzer/
+COPY --chown=analysis unittest.sh /analyzer/
 
 WORKDIR /analyzer
 RUN yarn install
