--- a/codeanalysis/js/exports-analysis/package.json
+++ b/codeanalysis/js/exports-analysis/package.json
@@ -13,9 +13,9 @@
   "license": "ISC",
   "dependencies": {
     "@babel/parser": "^7.0.0-beta.51",
-    "@babel/traverse": "^7.0.0-beta.51",
-    "tern": "^0.21.0",
-    "readdirp": "^2.1.0"
+    "@babel/traverse": "^7.4.5",
+    "readdirp": "^2.1.0",
+    "tern": "^0.21.0"
   },
   "devDependencies": {
     "@types/babel-traverse": "^6.25.4",
