--- a/codeanalysis/js/import-analysis/package.json
+++ b/codeanalysis/js/import-analysis/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@babel/parser": "^7.0.0-beta.51",
-    "@babel/traverse": "^7.0.0-beta.51",
+    "@babel/traverse": "^7.4.5",
     "readdirp": "^2.1.0"
   },
   "devDependencies": {
